Fix issue with max-width of projects on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -212,8 +212,7 @@ nav {
     flex-flow: row wrap;
     justify-content: center;
     gap: 4rem 4rem;
-    padding: 6rem 2rem;
-    max-width: calc(710px + 6rem + 8vw);
+    padding: 6rem 0.5rem;
 }
 
 .project {
@@ -342,6 +341,10 @@ footer h4 .icon-heart {
     }
     .service-picture {
         max-width: 85px;
+    }
+
+    .projects {
+        max-width: calc(710px + 6rem + 8vw);
     }
 }
 
